# libraryManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
libraryManager/: __init__.py  exceptions.py  manager.py
src/: __init__.py  manager.py
