[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libraryManager"
version = "1.0.0"
description = "Comprehensive directory & file manager with backup/restore and FS tools"
authors = [{ name = "Ibrahim Salih" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/brhamsalih/libraryManager"
Documentation = "https://github.com/brhamsalih/libraryManager#readme"